All command objects inherit from Command